# salary-per-hour

./: README.md  pyproject.toml
config/: config.yaml  list_table.json
csv_data_loader/: main.py  pg.py
sample_data/: employees.csv
sql/: ddl.sql  salary_per_hour.sql
